--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "version": "0.1.2",
   "author": "Colby Fayock <hello@colbyfayock.com>",
   "dependencies": {
+    "form-urlencoded": "^4.2.1",
     "gatsby": "^2.30.2",
     "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-source-filesystem": "^2.8.1",
+    "loaders.css": "^0.1.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-animate-height": "^2.0.23",
     "react-dom": "^16.14.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-loaders": "^3.0.1",
+    "react-tooltip": "^4.2.13"
   },
   "devDependencies": {},
   "keywords": [
